--- a/css/index.css
+++ b/css/index.css
@@ -187,7 +187,6 @@ footer {
   position: relative;
   width: 100%;
   height: 191px;
-
   border-radius: 3px;
   margin: 1.25em 0;
 }
@@ -228,6 +227,17 @@ footer {
 }
 
 @media (min-width: 767px) {
+
+    main {
+        /* background-color: #FAFAFA; */
+        margin: 0;
+        padding: 0;
+    }
+    .logo span {
+        font-size: 1.25em;
+    }
+
+
   .hero-container {
     padding: 17em 3.125em 3.125em 3.75em;
   }
@@ -249,14 +259,11 @@ footer {
     grid-column: span 3;
     margin: 0 0 2em 0;
   }
-.opened-post {
-    padding: 0 5.875em;
-}
-
-
+  .opened-post {
+    margin: 2.5em 7.375em 3em 7.375em;
+  }
 
   .opened-post-p {
-   
     font-size: 1.143125em;
   }
 
@@ -264,35 +271,37 @@ footer {
     font-size: 1.5rem;
   }
 
- 
   .opened-post-image-wrapper {
     height: 488px;
     width: 100%;
-    margin: 0 -3.25em;
-
+    width: calc(100% + (4em * 2));
+    margin-left: -4em;
   }
 
   .opened-post-image-wrapper::before {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    
   }
+
+  .about-me-container {
+    margin: 5.625em 7.375em 3em 7.375em;
+}
 
   .about-me {
     display: flex;
     gap: 0;
-    margin: 0 0 2.75em 0;
     align-items: center;
+    width: calc(100% + (4em * 2));
+    margin-left: -4em;
+    margin-bottom: 4.375em;
+
   }
 
   .about-me img {
-    margin: 0 2.5em;
+    margin: 0 2.5em 0 0;
   }
 
-  .about-me h1 {
-    padding: 0 1.9375em 0 0;
-  }
 
   .about-me p {
     padding: 0;
@@ -300,12 +309,8 @@ footer {
 
   .bold-font-middle {
     font-size: 1.25rem;
-    padding-left: 4.7em;
   }
-  .about-me-p {
-    padding-left: 5.875em;
-    padding-right: 5.875em;
-  }
+  
 
   .recent {
     margin: 0 0 1.3em 0;
